# cpp-cmake-vcpkg-example

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  README.md  compile_commands.json  main.cpp  other.cpp  other.h
vcpkg_triplets/: x86-linux-static.cmake
